We can now render the solution

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,8 @@
         "es2015"
     ],
     "plugins": [
+        "transform-react-jsx",
+        "transform-object-rest-spread",
         "transform-regenerator"
     ]
 }
