--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/app.js",
     "heroku-postbuild": "npm install --only=dev && webpack"
   },
   "repository": {
