--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sudoku-dlx-js",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "description": "Visual Sudoku solver using dlxlib",
   "main": "server/app.js",
   "dependencies": {
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "copy-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   },
